downloads/debug/scheduled_run.log
2025-12-19 17:59:42,731 INFO: Launching browser (headless=False)
2025-12-19 17:59:44,975 INFO: Navigated to admin start URL
2025-12-19 18:01:11,901 INFO: Downloaded and saved to C:\Users\kev\My Drive\Shopify_project\downloads\shopify_channel_performance_US_2025-09-01_2025-12-19_20251219_180111.csv
2025-12-19 18:01:12,369 INFO: Run finished with exit code 0
Loaded storage state from playwright_storage_state.json
Admin UI loaded; navigating to report...
Return code: 0 
2025-12-19 18:02:45,879 INFO: Launching browser (headless=False)
2025-12-19 18:02:48,190 INFO: Navigated to admin start URL
2025-12-19 18:02:48,198 INFO: No saved Playwright storage state found; performing automated login
2025-12-19 18:02:48,198 INFO: Waiting for email input field...
2025-12-19 18:02:48,247 INFO: Filled email: marga@kaiteandkyla.com
2025-12-19 18:02:48,247 INFO: Clicking continue button...
2025-12-19 18:02:52,372 INFO: Waiting for password input field...
2025-12-19 18:02:52,494 INFO: Filled password
2025-12-19 18:02:52,494 INFO: Clicking login button...
2025-12-19 18:02:55,379 INFO: Checking for 2FA prompt...
2025-12-19 18:03:05,390 INFO: No 2FA prompt detected or timeout: Page.wait_for_selector: Timeout 10000ms exceeded.
Call log:
  - waiting for locator("input[name=\"two_factor_code\"], input[name=\"otp\"], input[placeholder*=\"code\" i], input[placeholder*=\"2fa\" i]") to be visible

2025-12-19 18:03:05,390 INFO: Login automation complete; storage state will be saved after admin UI loads
2025-12-19 18:03:05,523 INFO: Saved storage state to playwright_storage_state.json
2025-12-19 18:04:18,529 ERROR: Runner crashed with exception: Page.wait_for_selector: Target page, context or browser has been closed
Call log:
  - waiting for locator("nav[aria-label='Primary'], #AppFrameMain") to be visible
Traceback (most recent call last):
  File "C:\Users\kev\My Drive\Shopify_project\playwright_runner.py", line 193, in <module>
    exit_code = run_export(headless=is_headless, timeout_seconds=int(os.getenv('LONG_TIMEOUT', '180')))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kev\My Drive\Shopify_project\playwright_runner.py", line 145, in run_export
    page.wait_for_selector("nav[aria-label='Primary'], #AppFrameMain", timeout=timeout_seconds*1000)
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\sync_api\_generated.py", line 8213, in wait_for_selector
    self._sync(
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_sync_base.py", line 115, in _sync
    return task.result()
           ^^^^^^^^^^^^^
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_page.py", line 419, in wait_for_selector
    return await self._main_frame.wait_for_selector(**locals_to_params(locals()))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_frame.py", line 369, in wait_for_selector
    await self._channel.send(
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_connection.py", line 69, in send
    return await self._connection.wrap_api_call(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_connection.py", line 559, in wrap_api_call
    raise rewrite_error(error, f"{parsed_st['apiName']}: {error}") from None
playwright._impl._errors.TargetClosedError: Page.wait_for_selector: Target page, context or browser has been closed
Call log:
  - waiting for locator("nav[aria-label='Primary'], #AppFrameMain") to be visible

2025-12-19 18:04:18,529 INFO: Run finished with exit code unknown
Traceback (most recent call last):
  File "C:\Users\kev\My Drive\Shopify_project\playwright_runner.py", line 193, in <module>
    exit_code = run_export(headless=is_headless, timeout_seconds=int(os.getenv('LONG_TIMEOUT', '180')))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kev\My Drive\Shopify_project\playwright_runner.py", line 145, in run_export
    page.wait_for_selector("nav[aria-label='Primary'], #AppFrameMain", timeout=timeout_seconds*1000)
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\sync_api\_generated.py", line 8213, in wait_for_selector
    self._sync(
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_sync_base.py", line 115, in _sync
    return task.result()
           ^^^^^^^^^^^^^
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_page.py", line 419, in wait_for_selector
    return await self._main_frame.wait_for_selector(**locals_to_params(locals()))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_frame.py", line 369, in wait_for_selector
    await self._channel.send(
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_connection.py", line 69, in send
    return await self._connection.wrap_api_call(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kev\My Drive\Shopify_project\.venv\Lib\site-packages\playwright\_impl\_connection.py", line 559, in wrap_api_call
    raise rewrite_error(error, f"{parsed_st['apiName']}: {error}") from None
playwright._impl._errors.TargetClosedError: Page.wait_for_selector: Target page, context or browser has been closed
Call log:
  - waiting for locator("nav[aria-label='Primary'], #AppFrameMain") to be visible


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\kev\My Drive\Shopify_project\playwright_runner.py", line 196, in <module>
    send_alert_if_configured('Shopify export runner crashed', f'Exception: {e} -- check {LOG_FILE}')
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'send_alert_if_configured' is not defined
Return code: 1 
2025-12-19 18:06:51,912 INFO: Launching browser (headless=False)
2025-12-19 18:06:53,989 INFO: Navigated to admin start URL
2025-12-19 18:06:53,989 INFO: No saved Playwright storage state found; performing automated login
2025-12-19 18:06:53,989 INFO: Waiting for email input field...
2025-12-19 18:06:54,039 INFO: Filled email: marga@caiteandkyla.com
2025-12-19 18:06:54,039 INFO: Clicking continue button...
2025-12-19 18:06:57,500 INFO: Waiting for password input field...
2025-12-19 18:06:57,595 INFO: Filled password
2025-12-19 18:06:57,595 INFO: Clicking login button...
2025-12-19 18:07:27,840 INFO: Checking for 2FA prompt...
2025-12-19 18:07:37,856 INFO: No 2FA prompt detected or timeout: Page.wait_for_selector: Timeout 10000ms exceeded.
Call log:
  - waiting for locator("input[name=\"two_factor_code\"], input[name=\"otp\"], input[placeholder*=\"code\" i], input[placeholder*=\"2fa\" i]") to be visible

2025-12-19 18:07:37,856 INFO: Login automation complete; storage state will be saved after admin UI loads
2025-12-19 18:07:38,007 INFO: Saved storage state to playwright_storage_state.json
2025-12-19 18:08:30,045 INFO: Downloaded and saved to C:\Users\kev\My Drive\Shopify_project\downloads\shopify_channel_performance_US_2025-09-01_2025-12-19_20251219_180829.csv
2025-12-19 18:08:30,342 INFO: Run finished with exit code 0
Admin UI loaded; navigating to report...
Return code: 0 
  File "C:\Users\kev\My Drive\Shopify_project\playwright_runner.py", line 240
    def upload_csv_to_sheet(csv_path: Path):
    ^^^
IndentationError: expected an indented block after 'try' statement on line 238
Return code: 1 
  File "C:\Users\kev\My Drive\Shopify_project\playwright_runner.py", line 333
    exit_code = run_export(headless=is_headless, timeout_seconds=int(os.getenv('LONG_TIMEOUT', '180')))
IndentationError: unexpected indent
Return code: 1 
2025-12-19 22:05:05,727 INFO: Launching browser (headless=False)
2025-12-19 22:05:07,460 INFO: Navigated to admin start URL
^C